--- a/css/style.css
+++ b/css/style.css
@@ -1305,3 +1305,17 @@ body {
     margin-bottom: 53px;
     font-weight: 700;
 }
+a.homeBtn {
+    width: 35px;
+    height: 35px;
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    border: 3px solid #fe7241;
+    text-align: center;
+}
+
+a.homeBtn img {
+    width: 24px;
+    height: 20px;
+}
